# mpl

./: .gitignore  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  datasets.json  index.html  justfile  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yml  release.yaml
assets/: index-2O14ctZh.js  index-B31ANPOp.js  index-B8UDJ_k3.js  index-BNPYS8rm.css  index-BP6Y11cu.js  index-BUQXaAkb.js  index-BWQ5yZh0.js  index-BXWvLog9.css  index-Bc0m0MpH.js  index-BlLCLMou.js  index-Bnyw-wtr.js  index-BoAkHs1s.js  index-BrXwMpsL.css  index-BtN48NyH.js  index-CSq1YfeO.css  index-CiTFvlOt.js  index-CrVbTmO4.js  index-Cxnrk6UQ.js  index-D3AOuXwL.js  index-D9ruH3Bs.js  index-DR8dDofi.js  index-cecyHddz.css  index-m1Js-YgL.js  index-sATpLPfj.js  index-uTnDIDsf.css  mpl_bg-DdH6dLom.wasm  mpl_lang_bg-B1L3MJx8.wasm  mpl_lang_bg-B9ARJ32M.wasm  mpl_lang_bg-BklvMQsh.wasm  mpl_lang_bg-CTlf0oO4.wasm  mpl_lang_bg-Cw8iGjxq.wasm  mpl_lang_bg-DEU8OSLm.wasm  mpl_lang_bg-DNVILiEB.wasm  mpl_lang_bg-DwO4yarw.wasm  mpl_lang_bg-DwaKK633.wasm  mpl_lang_bg-HdMcYQB2.wasm  mpl_lang_bg-klxoOCbC.wasm  mpl_lang_bg-kn57nyCe.wasm  mpl_lang_bg-s5BkD8S4.wasm  mpl_lang_bg-wV8LdAv1.wasm  (+5 more)
crates/mpl-lang/: Cargo.toml  spec.md
crates/mpl-playground/: Cargo.toml
datasets/: dataset--metric.json  dev.metrics--alertmanager_alerts.json  dev.metrics--http_requests_total.json  dev.metrics--transport_request_duration_seconds_bucket.json  index.json  my_app--cache.hit_ratio.json  my_app--error.rate.json  my_app--queue.depth.json  my_app--request.latency_ms.json  otel--db_query_duration.json  otel--http_requests_total.json  otel--rpc_duration.json  otel--runtime.gc_pause.json  test--container_cpu_usage_seconds_total.json  test--http_request_duration_seconds_bucket.json  test--http_request_duration_seconds_count.json  test--http_requests_total.json  test--http_server_request_duration_seconds_bucket.json  test--kube_node_info.json  test--kube_pod_container_resource_requests.json  test--kube_pod_info.json  test--kube_pod_status_ready.json  test-with-minus.com--ingest_pressure.json
doc/adr/: 0002-language-level-types.md
examples/: histogram.mpl  index.json  map-mul.mpl  slo.mpl
extra/mpl-playground/: Cargo.toml
extra/mpl-playground/src/interpreter/: tests.rs
playground/: .gitignore  .oxfmtrc.json  README.md  build-mpl-wasm.sh  build-wasm.sh  charts.ts  datasets.json  datasets.ts  datasource.ts  editor.ts  index.html  integration.test.ts  interpreter.test.ts  interpreter.ts  main.ts  package-lock.json  package.json  playwright.config.ts  styles.css  tsconfig.json  vite.config.ts  vitest.setup.ts
playground/e2e/: examples.spec.ts
playground/examples/: max-threshold.mpl  parser-error.mpl  rate.mpl  sample.mpl  slo-ingest-rate.mpl
src/: enc_regex.rs  errors.rs  lib.rs  linker.rs  mpl.pest  parser.rs  query.rs  tags.rs  tests.rs  time.rs  types.rs  visitor.rs  wasm.rs
src/query/: fmt.rs
src/wasm/: completions.rs  diagnostics.rs  interpreter.rs  lints.rs  parser.rs  steps.rs  tokenize.rs  visit.rs
tests/: parse.rs
tests/errors/: delta_histogram_conversion.mpl  incomplete_query.mpl  (+3 more)
(+47 files in other folders)
