[package]
name = "mpl-playground"
version = "0.3.0"
edition = "2024"
authors = ["Seoyoung Lee <seoyoung@axiom.co>", "Arne Bahlo <arne@axiom.co>", "Heinz Gies <heinz@axiom.co>", "Samuel Cristobal <samu@messy.page>"]
description = "MPL playground: step-based parser and in-memory interpreter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axiomhq/mpl"
rust-version = "1.92.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpl-lang = { path = "../..", default-features = false, features = ["wasm", "internals"] }
derive_more = { version = "2", features = ["deref"] }
eyre = "0.6"
miette = "7.6.0"
pest = "2.8.6"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.108"

[dev-dependencies]
test-case = "3"
strumbra = { version = "0.6", features = ["serde"] }
